# microphone_icon

./: CMakeLists.txt  README.md  microphone-icon.desktop
arch-build/: PKGBUILD
include/: Alsa.hpp  AlsaMic.hpp  MicrophoneIcon.hpp
src/: Alsa.cpp  AlsaMic.cpp  Main.cpp  MicrophoneIcon.cpp  microphone_icon.py
